# lazy_simd

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: auto_simd.rs
src/: lib.rs
src/scalar/: mod.rs
src/simd/: backend.rs  mod.rs
src/simd/aligned/: arr.rs  mod.rs  slice.rs
src/simd/unaligned/: mod.rs
