[package]
name = "lazy_simd"
description = "Trait based SIMD acceleration and safe abstraction"
version = "0.1.0"
rust-version = "1.83"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/lazy_simd"
keywords = ["simd", "mathematics", "traits"]
categories = ["science", "mathematics", "data-structures", "no-std::no-alloc"]
repository = "https://github.com/bobbothe2nd/lazy_simd"
readme = "README.md"

[features]
alloc = []
std = ["alloc"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat" # offers further improvements if using aligned simd::Simd wrapper

[profile.release.package.'*']
opt-level = 3
codegen-units = 1

[dependencies]
num-traits = { version = "0.2.19", default-features = false }

[dev-dependencies]
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
